AbortController.signal.reason is lost after garbage collection https://bugs.webkit.org/show_bug.cgi?id=293319 rdar://problem/152111446

Reviewed by Per Arne Vollan and Chris Dumez.

Make sure that JSAbortController marks its signal reason to prevent GC.

* LayoutTests/http/tests/fetch/abort-signal-gc-expected.txt:
* LayoutTests/http/tests/fetch/abort-signal-gc.html:
* Source/WebCore/dom/AbortController.cpp:
(WebCore::JSAbortController::visitAdditionalChildren):
* Source/WebCore/dom/AbortController.idl:

Canonical link: https://commits.webkit.org/295688@main